--- a/app/Pipfile
+++ b/app/Pipfile
@@ -11,6 +11,7 @@ google-cloud = "==0.34.0"
 google-cloud-storage = "==2.10.0"
 numpy = "==1.25.1"
 psutil = "==5.9.5"
+gunicorn = "*"
 
 [dev-packages]
 
