--- a/monitoring/Pipfile
+++ b/monitoring/Pipfile
@@ -4,23 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-scikit-learn = "==1.3.0"
-mlflow = "==2.5.0"
-flask = "*"
-google-cloud = "==0.34.0"
-google-cloud-storage = "==2.10.0"
-numpy = "==1.25.1"
-psutil = "==5.9.5"
-gunicorn = "*"
-prefect = "*"
-tqdm = "*"
-joblib = "*"
-pyarrow = "*"
-psycopg = "*"
-psycopg-binary = "*"
+fastapi = "*"
+uvicorn = "*"
 evidently = "*"
 pandas = "*"
-jupyter = "*"
+pymongo = "*"
 
 [dev-packages]
 
