--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,30 +6,6 @@ networks:
 
 services:
 
-  prefect-server:
-    build:
-      context: ./app
-      dockerfile: Dockerfile
-    container_name: prefect-server
-    environment:
-      - PREFECT_ORION_API_HOST=127.0.0.1
-    expose:
-      - "4200"
-    ports:
-      - "127.0.0.1:4200:4200"
-    command: prefect server start
-    networks:
-      - back-tier
-
-  prefect-flow:
-    build:
-      context: ./app
-      dockerfile: Dockerfile
-    container_name: prefect-flow
-    command: prefect deploy prefect_flows.py:main -n model_training -p training-pool --cron "0 5 * * MON"
-    networks:
-      - back-tier
-
   prediction-service:
     build: 
       context: ./app
@@ -43,4 +19,13 @@ services:
     networks:
       - back-tier
 
-
+  monitoring-service:
+    build: 
+      context: ./monitoring
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8001"
+    networks:
+      - back-tier
+    volumes:
+      - './monitoring/dashboards:/app/dashboards'
